add scan name to mfov-as-tile tileIds and move scan name before z in layer-as-tile tileIds